edit bigtable modules